crates/test-files/fixtures/compile_errors/ctx_undefined_contract_init.fe
contract Bar:
    pass

contract Foo:
    pub fn baz():
        Bar(address(0))